--- a/9-exercises/functions/index.html
+++ b/9-exercises/functions/index.html
@@ -14,7 +14,10 @@
             const message = getMessage('Ornella');
             document.write(message);
             // TODO: Add setTimeout code
-
+            setTimeout(
+                () => { document.write('...Hello again!')},
+                2000
+            )
 
         </script>
     </body>
